--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 	<head>
 		<title> Prueba Inicial JS</title>
 	</head>
-	<script type="text/javascript">
-		
-	</script>
+	<script src="script.js"></script>
 	<body>
-		<a > Vamooos </a> 
+		<a> Vamooos </a> 
 	</body>
 </html>
