--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title> Prueba Inicial JS</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<script src="script.js"></script>
 	<body>
