--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	</head>
 	<script src="script.js"></script>
 	<body>
-		<a><b> Vamooos!!</b></a> 
+		<a><b> Vamooos!!</b></a>
+		<p>
+			Esto es un texto que se usa de prueba
+		</p>
 	</body>
 </html>
